kubernetes/docs/en/exposing/sayhello-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayhello-service-clusterip
spec:
  selector:
    app: sayhello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
