kubernetes/docs/en/exposing/sayhello-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayhello-service-externalname
spec:
  selector:
    app: sayhello
  ports:
  - name: webport
    protocol: TCP
    ################ custom port, not in (80, 8080, 443)
    port: 51478
    # targetPort: Deployed Container's Port = containerPort
    targetPort: 8080
  # LoadBalancer
  type: ExternalName
  externalName: sayhello-service-externalname.default.svc.cluster.local
EOF
