kubernetes/docs/en/exposing/sayhello-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sayhello-service-loadbalancer
spec:
  selector:
    app: sayhello
  ports:
  - name: webport
    protocol: TCP
    # port: Port that Service will be using
    port: 80
    # targetPort: Deployed Container's Port = containerPort
    targetPort: 8080
  ################ ClusterIP -> NodePort
  type: LoadBalancer
EOF
